--- a/apps/base/mealie/deployment.yaml
+++ b/apps/base/mealie/deployment.yaml
@@ -18,9 +18,9 @@ spec:
       containers:
       - image: ghcr.io/mealie-recipes/mealie:v3.10.2
         name: mealie
-        volumeMounts:
-        - mountPath: /app/data
-          name: mealie-data
+#        volumeMounts:
+#        - mountPath: /app/data
+#          name: mealie-data
         ports:
         -    containerPort: 9000
 #      volumes:
